tdf#93096 sw: fix selection with keyboard outside current view

Regression from commit c9175a1bd3249ad573ae6827bf19963a3ebe2fbc
(SwViewShell::ImplEndAction: avoid direct PaintDesktop(), 2015-07-03),
the problem is that while going via InvalidateWindows() is fine for the
double-buffering case, it has side effects when painting directly, so
revert back to the old code in that case.

Change-Id: Ib1e3b143f5cfe2c6ab8b102a1a2064900282f136
(cherry picked from commit 222f10e773ba51a19880be1b798990260c198147)
Reviewed-on: https://gerrit.libreoffice.org/17835
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit a56cda359b45a900d0b5d017693efccf3b5b2e59)
Reviewed-on: https://gerrit.libreoffice.org/17842
Reviewed-by: Michael Stahl <mstahl@redhat.com>